# PY2SESS-TEST

./: .gitignore  LARGE_CASE_COMPARISON.md  PY2SESS_BUILD.md  RRTMGP_BUILD.md  RUN_PY2SESS_LARGE
rte_py2sess_comparison/: README.md  compare_outputs.py  compare_to_pyharp_disort.py  prepare_py2sess_optics.py  run_all.sh  run_py2sess_backends.py  run_pyharp_solvers.py
rte_py2sess_comparison/outputs/: comparison_summary.csv  comparison_summary.md  comparison_vs_pyharp_disort8.csv  comparison_vs_pyharp_disort8.md  timings_summary.csv
rte_py2sess_comparison/outputs_large/: comparison_summary.csv  comparison_summary.md  comparison_vs_pyharp_disort8.csv  comparison_vs_pyharp_disort8.md  timings_summary.csv
rte_py2sess_comparison/rte_driver/: CMakeLists.txt  rte_sw_py2sess.F90
